Changed to webp images and fixed responsiveness for POUR images on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -490,6 +490,17 @@ hr {
   margin: auto;
 }
 
+@media (max-width: 1200px) and (min-width: 768px) {
+  .cardsContainer{
+    max-width: 850px;
+  }
+
+  .quiz-container {
+    width: 1200px;
+    padding: var(--spacing-sm);
+  }
+}
+
 @media (max-width: 768px) {
   .headerInner {
     flex-direction: column;
@@ -539,7 +550,6 @@ hr {
     justify-content: center;
     align-items: center;
   }
-}
 
 .about-section {
   padding: var(--spacing-md) var(--spacing-sm);
@@ -577,15 +587,9 @@ hr {
   width: clamp(200px, 50%, 500px); /* responsiv storlek */
   border-radius: var(--border-radius);
   height: auto;
+}
 
-  @media (min-width: 1200px) {
-    .quiz-container {
-      width: 1200px;
-      padding: var(--spacing-sm);
-    }
-  }
-
-  @media (prefers-reduced-motion: reduce) {
+@media (prefers-reduced-motion: reduce) {
     *,
     *::before,
     *::after {
